--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,25 @@ nav {
     display: flex;
     justify-content: space-between;
 }
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+}
+
+nav li a {
+    color: lightpink;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 5px 8px;
+}
+
+nav li a:hover {
+    color: coral;
+    text-decoration: none;
+}
