--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,18 +15,20 @@
         <h4>Login MySQL Node.js</h4>
         <ul>
             <li> <a href="#"> Home </a> </li>
-            <li> <a href="#"> Login </a> </li>
-            <li> <a href="#"> Register </a> </li>
+            <li> <a href="/login"> Login </a> </li>
+            <li> <a href="/register"> Register </a> </li>
         </ul>
     </nav>
-
-    <div class="jumbotron">
-        <h1 class="display-4">Login</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-            featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="container mt-4">
+        <div class="jumbotron">
+            <h1 class="display-4">Login App</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
+                to
+                featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
