--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
     <nav>
         <h4>Login MySQL Node.js</h4>
         <ul>
-            <li> <a href="#"> Home </a> </li>
+            <li> <a href="/"> Home </a> </li>
             <li> <a href="/login"> Login </a> </li>
             <li> <a href="/register"> Register </a> </li>
         </ul>
