--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,7 +14,7 @@
     <nav>
         <h4>Login MySQL Node.js</h4>
         <ul>
-            <li> <a href="#"> Home </a> </li>
+            <li> <a href="/"> Home </a> </li>
             <li> <a href="/login"> Login </a> </li>
             <li> <a href="/register"> Register </a> </li>
         </ul>
@@ -25,7 +25,7 @@
                 Register New User
             </div>
             <div class="card-body">
-                <form>
+                <form action="/auth/register" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" name="name">
