--- a/views/register.hbs
+++ b/views/register.hbs
@@ -41,6 +41,11 @@
                         <input type="password" class="form-control" id="password" name="password">
                     </div>
 
+                    <div class="form-group">
+                        <label for="password2">Confirm Password</label>
+                        <input type="password" class="form-control" id="password2" name="password2">
+                    </div>
+
                     <button type="submit" class="btn btn-primary">Register</button>
                 </form>
             </div>
