--- a/views/register.hbs
+++ b/views/register.hbs
@@ -49,8 +49,12 @@
                     <button type="submit" class="btn btn-primary">Register</button>
                 </form>
             </div>
-
         </div>
+        {{#if message}}
+        <h4 class="alert alert-danger mt-4">
+            {{message}}
+        </h4>
+        {{/if}}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
